update alert gui

--- a/src/com/ats/gui/alert/CredentialsAlert.mxml
+++ b/src/com/ats/gui/alert/CredentialsAlert.mxml
@@ -1,67 +1,88 @@
 <?xml version="1.0"?>
-<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
-          xmlns:s="library://ns.adobe.com/flex/spark"
-          paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5" >
+<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
+		  xmlns:s="library://ns.adobe.com/flex/spark"
+		  filters="{dropShadow}">
+	
+	<s:Rect	left="0" right="0" top="0" bottom="0" alpha="0.9">
+		<s:fill>
+			<s:LinearGradient rotation="76">
+				<s:GradientEntry color="0xfbfbfb"/>
+				<s:GradientEntry color="0xe6e7e8"/>
+			</s:LinearGradient>
+		</s:fill>
+		<s:stroke>
+			<s:SolidColorStroke color="#ffffff" alpha="0.6"/>
+		</s:stroke>
+	</s:Rect>
 
-    <s:Label text="Genymotion login"/>
-    <s:TextInput id="loginInput"/>
-    <s:Label text="Password"/>
-    <s:TextInput id="passwordInput"/>
-    <s:Label id="infoLabel"/>
-    <s:Label id="errorLabel"/>
-
-    <s:HGroup>
-        <s:Button label="OK" click="okButtonHandler(event)"/>
-        <s:Button label="Cancel" click="cancelButtonHandler(event)"/>
-    </s:HGroup>
-
-    <fx:Script>
-        <![CDATA[
-        import com.ats.managers.gmsaas.GmsaasManager;
-
-        import mx.managers.PopUpManager;
-
-        public var successCallback:Function;
-        public var cancelCallback:Function;
-
-        private function cancelButtonHandler(event:MouseEvent):void {
-            if (cancelCallback) {
-                cancelCallback(this)
-            } else {
-                PopUpManager.removePopUp(this)
-            }
-        }
-
-        private function okButtonHandler(event:MouseEvent):void {
-            var login:String = loginInput.text
-            var password:String = passwordInput.text
-
-            if (!login || !password) {
-                errorLabel.text = "Missing credentials"
-                return
-            }
-
-            infoLabel.text = "Connecting..."
-
-            var alert:CredentialsAlert = this
-            GmsaasManager.getInstance().login(login, password, function(result:Object, error:String):void {
-                infoLabel.text = null
-
-                if (error) {
-                    errorLabel.text = error
-                    return
-                }
-
-                if (!successCallback) {
-                    trace("WARNING : Credentials alert success callback not set")
-                    return
-                }
-
-                successCallback(alert)
-            })
-        }
-
-        ]]>
-    </fx:Script>
-
-</s:VGroup>
+	<s:VGroup width="100%" height="100%" gap="3" paddingBottom="5" paddingLeft="5" paddingRight="5"
+			  paddingTop="5">
+		<s:Label color="#626262" fontStyle="italic" text="Genymotion login"/>
+		<s:TextInput id="loginInput" width="100%"/>
+		<s:Spacer height="2"/>
+		<s:Label color="#626262" fontStyle="italic" text="Password"/>
+		<s:TextInput id="passwordInput" width="100%"/>
+		<s:Label id="infoLabel"/>
+		<s:Label id="errorLabel"/>
+		
+		<s:HGroup>
+			<s:Button label="Ok" click="okButtonHandler(event)" icon="assets/icons/16/tick.png"/>
+			<s:Button label="Cancel" click="cancelButtonHandler(event)" icon="assets/icons/16/cross.png"/>
+		</s:HGroup>
+	</s:VGroup>
+	
+	<fx:Script>
+		<![CDATA[
+			import com.ats.managers.gmsaas.GmsaasManager;
+			
+			import mx.managers.PopUpManager;
+			
+			import flash.filters.BitmapFilterQuality;
+			import spark.filters.DropShadowFilter;
+			
+			public static const dropShadow:DropShadowFilter = new DropShadowFilter(4.0, 45, 0x000000, 0.4, 8.0, 8.0, 0.9, BitmapFilterQuality.HIGH, false, false, false);
+			
+			public var successCallback:Function;
+			public var cancelCallback:Function;
+			
+			private function cancelButtonHandler(event:MouseEvent):void {
+				if (cancelCallback) {
+					cancelCallback(this)
+				} else {
+					PopUpManager.removePopUp(this)
+				}
+			}
+			
+			private function okButtonHandler(event:MouseEvent):void {
+				var login:String = loginInput.text
+				var password:String = passwordInput.text
+				
+				if (!login || !password) {
+					errorLabel.text = "Missing credentials"
+					return
+				}
+				
+				infoLabel.text = "Connecting..."
+				
+				var alert:CredentialsAlert = this
+				GmsaasManager.getInstance().login(login, password, function(result:Object, error:String):void {
+					infoLabel.text = null
+					
+					if (error) {
+						errorLabel.text = error
+						return
+					}
+					
+					if (!successCallback) {
+						trace("WARNING : Credentials alert success callback not set")
+						return
+					}
+					
+					successCallback(alert)
+				})
+			}
+			
+		]]>
+	</fx:Script>
+	
+</s:Group>
