fix second Pierre mistake !!!!

--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -206,7 +206,7 @@
 
 			peerGroup = new PeerGroupConnection(workFolder, devices, simulators, httpPort);
 			genymotionManager = new GenymotionManager();
-			if (GmsaasInstaller.isInstalled) {
+			if (GmsaasInstaller.isInstalled()) {
 				genymotionManager.fetchContent()
 			}
 		}
