Readd genymotion terminate at close

--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -238,7 +238,7 @@
 				infoStatus.text = "Please wait all processes to finish ..."
 				
 				peerGroup.close();
-				// genymotionManager.terminate()
+				genymotionManager.terminate()
 
 				simulators.terminate();
 				
