--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -387,24 +387,27 @@
 		
 	</s:Group>
 	<s:VGroup bottom="20" left="20" right="20" top="48" gap="2">
-		<s:Group id="connectedGroup" buttonMode="true" height="100%" width="100%"
+		<s:Group id="connectedGroup" height="100%" width="100%"
 				 clipAndEnableScrolling="true">
-			<s:Group height="26" click="clickConnected_clickHandler(event)" width="100%">
-				<s:Rect width="100%" height="100%" radiusX="3" alpha="0.7">
+			<s:Group height="26" buttonMode="true" click="clickConnected_clickHandler(event)" width="100%">
+				<s:Rect	left="0" right="0" top="0" bottom="0" alpha="0.7" radiusX="3" radiusY="3">
 					<s:fill>
 						<s:LinearGradient rotation="90">
-							<s:GradientEntry color="0xFFFFFF"/>
-							<s:GradientEntry color="0xDADADA"/>
+							<s:GradientEntry color="0x5a636c"/>
+							<s:GradientEntry color="0x171e28"/>
 						</s:LinearGradient>
 					</s:fill>
 					<s:stroke>
-						<s:SolidColorStroke color="#ffffff" weight="1"/>
+						<s:LinearGradientStroke rotation="90">
+							<s:GradientEntry color="0x6e7780"/>
+							<s:GradientEntry color="0x0f1217"/>
+						</s:LinearGradientStroke>
 					</s:stroke>
 				</s:Rect>
-				<s:Label verticalCenter="0" paddingLeft="7" fontSize="13" text="Connected Devices" fontWeight="bold"/>
+				<s:Label verticalCenter="0" paddingLeft="7" fontSize="13" color="0xc8cdd2" text="Connected Devices" fontWeight="bold"/>
 			</s:Group>
 			
-			<s:VGroup top="24" left="0" right="0" bottom="30" gap="3">
+			<s:VGroup top="23" left="0" right="0" bottom="30" gap="3">
 				<s:VGroup filters="{RunningDeviceRenderer.dropShadowFilterMiddle}" gap="3" paddingTop="12" paddingLeft="2" paddingRight="2"
 						  visible="{devices.collection.length==0}" includeInLayout="{devices.collection.length==0}">
 					<s:Label fontWeight="bold" 
@@ -424,23 +427,26 @@
 		<s:Group id="simulatorsGroup" height="26" width="100%" clipAndEnableScrolling="true">
 			<s:Group id="clickGroup" buttonMode="true" height="26" width="100%"
 					 click="clickGroup_clickHandler(event)">
-				<s:Rect id="backRect" width="100%" height="100%" radiusX="3" alpha="0.7">
+				<s:Rect	left="0" right="0" top="0" bottom="0" alpha="0.7" radiusX="3" radiusY="3">
 					<s:fill>
-						<s:LinearGradient id="gradientButton" rotation="90">
-							<s:GradientEntry color="0xFFFFFF"/>
-							<s:GradientEntry color="0xDADADA"/>
+						<s:LinearGradient rotation="90">
+							<s:GradientEntry color="0x5a636c"/>
+							<s:GradientEntry color="0x171e28"/>
 						</s:LinearGradient>
 					</s:fill>
 					<s:stroke>
-						<s:SolidColorStroke id="stroke2" color="#ffffff" weight="1"/>
+						<s:LinearGradientStroke rotation="90">
+							<s:GradientEntry color="0x6e7780"/>
+							<s:GradientEntry color="0x0f1217"/>
+						</s:LinearGradientStroke>
 					</s:stroke>
 				</s:Rect>
-					<s:Label fontSize="13" verticalCenter="0" left="7" text="Available Simulators" fontWeight="bold"
-							 filters="{RunningDeviceRenderer.dropShadowFilterMiddle}"/>
-
+				<s:Label fontSize="13" verticalCenter="0" left="7" color="0xc8cdd2" text="Available Simulators" fontWeight="bold"
+						 filters="{RunningDeviceRenderer.dropShadowFilterMiddle}"/>
+				
 			</s:Group>
 			<s:Label fontStyle="italic" fontSize="11" top="38"
-					 text="{simulators.info}" paddingLeft="5"/>
+					 text="{simulators.collection.length==0?simulators.info:''}" paddingLeft="5"/>
 			<s:List width="100%" top="30" bottom="0"
 					alternatingItemColors="[#efefef, #dedede]" borderVisible="false"
 					contentBackgroundAlpha="0.0" dataProvider="{simulators.collection}"
@@ -452,19 +458,22 @@
 			<s:Group height="26" width="100%">
 				<s:Group buttonMode="true" height="26" width="100%"
 						 click="clickGroup2_clickHandler(event)">
-					<s:Rect width="100%" height="100%" radiusX="3" alpha="0.7">
+					<s:Rect	left="0" right="0" top="0" bottom="0" alpha="0.7" radiusX="3" radiusY="3">
 						<s:fill>
 							<s:LinearGradient rotation="90">
-								<s:GradientEntry color="0xFFFFFF"/>
-								<s:GradientEntry color="0xDADADA"/>
+								<s:GradientEntry color="0x5a636c"/>
+								<s:GradientEntry color="0x171e28"/>
 							</s:LinearGradient>
 						</s:fill>
 						<s:stroke>
-							<s:SolidColorStroke color="#ffffff" weight="1"/>
+							<s:LinearGradientStroke rotation="90">
+								<s:GradientEntry color="0x6e7780"/>
+								<s:GradientEntry color="0x0f1217"/>
+							</s:LinearGradientStroke>
 						</s:stroke>
 					</s:Rect>
 					<s:HGroup width="100%" paddingLeft="7" paddingRight="7" verticalCenter="0" verticalAlign="middle" gap="3">
-						<s:Label fontSize="13" text="Genymotion Models" fontWeight="bold"
+						<s:Label fontSize="13" text="Genymotion Models" fontWeight="bold" color="0xc8cdd2"
 								 filters="{RunningDeviceRenderer.dropShadowFilterMiddle}" width="100%"/>
 						<s:Group id="reloadButtons" visible="true" alpha="0.4" buttonMode="true" click="reloadButtons_clickHandler(event)"
 								 height="20" width="20">
@@ -474,8 +483,6 @@
 				</s:Group>
 			</s:Group>
 			
-			<s:Label fontStyle="italic" fontSize="11" top="36"
-					 text="---" paddingLeft="5"/>
 			<s:List left="0" right="0" top="30" bottom="0" visible="{!genymotionManager.loading}"
 					alternatingItemColors="[#efefef, #dedede]" borderVisible="false"
 					contentBackgroundAlpha="0.0" dataProvider="{genymotionManager.recipes}"
