--- a/src/com/ats/gui/renderer/GenymotionTemplateDeviceRenderer.mxml
+++ b/src/com/ats/gui/renderer/GenymotionTemplateDeviceRenderer.mxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:ItemRenderer
+<renderer:SimulatorRenderer
 	xmlns:fx="http://ns.adobe.com/mxml/2009"
 	xmlns:s="library://ns.adobe.com/flex/spark"
 	xmlns:renderer="com.ats.gui.renderer.*"
-	creationComplete="creationCompleteHandler(event)"
-	width="356" rollOver="simulatorrenderer1_rollOverHandler(event)"
+	width="100%" rollOver="simulatorrenderer1_rollOverHandler(event)"
 	rollOut="simulatorrenderer1_rollOutHandler(event)"
 	click="itemrenderer1_clickHandler(event)">
 	
@@ -37,10 +36,9 @@
 		}
 
 		[Bindable(event="updateDataEvent")]
-		public function get sim():Simulator {
+		public override function get sim():Simulator {
 			return data as Simulator
 		}
-
 
 		protected function startStopButton_clickHandler(event:MouseEvent):void {
 			(data as GenymotionRecipe).startInstance()
@@ -50,7 +48,7 @@
 			mainGroup.filters = []
 		}
 
-		protected function creationCompleteHandler(event:FlexEvent):void {
+		/*protected function creationCompleteHandler(event:FlexEvent):void {
 			(data as GenymotionRecipe).instances.addEventListener(CollectionEvent.COLLECTION_CHANGE, collectionChangeHandler);
 			calculateRowHeight()
 		}
@@ -61,7 +59,7 @@
 
 		private function calculateRowHeight():void {
 			height = (data as GenymotionRecipe).instances.length > 0 ? 50 : 40
-		}
+		}*/
 
 		protected function simulatorrenderer1_rollOverHandler(event:MouseEvent):void {
 			plusButton.visible = true;
@@ -81,7 +79,21 @@
 		]]>
 	</fx:Script>
 	
-	<s:VGroup width="100%" verticalAlign="middle" paddingBottom="4">
+	<s:Rect	left="0" right="0" top="1" bottom="1" alpha="0.2" radiusX="0" radiusY="0">
+		<s:fill>
+			<s:LinearGradient id="grad" rotation="-90">
+				<s:GradientEntry id="colorTop" color="0x5a636c"/>
+				<s:GradientEntry id="colorBottom" color="0x171e28"/>
+			</s:LinearGradient>
+		</s:fill>
+		<s:stroke>
+			<s:LinearGradientStroke rotation="90">
+				<s:GradientEntry id="stroke1" color="0x6e7780"/>
+				<s:GradientEntry id="stroke2" color="0x0f1217"/>
+			</s:LinearGradientStroke>
+		</s:stroke>
+	</s:Rect>
+	<s:VGroup width="100%" height="100%" verticalAlign="middle">
 		<s:HGroup id="mainGroup" width="100%" verticalAlign="middle" paddingRight="6" paddingLeft="5" filters="{dropShadowFilterMiddle}">
 			<s:HGroup id="firstGroup" verticalAlign="middle" buttonMode="true" gap="0">
 				<s:BitmapImage id="osBitmap" left="6" smooth="true" smoothingQuality="high" source="assets/icons/32/android.png"/>
@@ -90,9 +102,7 @@
 						<s:Label text="{data.name}" fontWeight="bold" maxWidth="234" maxDisplayedLines="1"/>
 						<s:Label text="({data.version.stringValue})" fontSize="11" fontStyle="italic"/>
 					</s:HGroup>
-					<s:Label text="{data.width} x {data.height}  (dpi:{data.dpi})" fontSize="11" fontStyle="italic" color="#758696"/>
-					<s:Label id="instancesCountLabel" text="(Current running instances count : {data.instances.length})" fontSize="11"
-							 visible="{data.instances.length > 0}" includeInLayout="{data.instances.length > 0}"/>
+					<s:Label text="{data.width} x {data.height}  (dpi:{data.dpi})" fontSize="11" fontStyle="italic" color="#e4e7e9"/>
 				</s:VGroup>
 			</s:HGroup>
 			<s:Spacer width="100%"/>
@@ -107,4 +117,4 @@
                 itemRenderer="com.ats.gui.renderer.GenymotionRunningInstanceRenderer" useVirtualLayout="false"/> -->
 	</s:VGroup>
 	
-</s:ItemRenderer>
+</renderer:SimulatorRenderer>
