--- a/src/com/ats/gui/alert/CredentialsAlert.mxml
+++ b/src/com/ats/gui/alert/CredentialsAlert.mxml
@@ -1,43 +1,26 @@
 <?xml version="1.0"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
+<s:VGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
-		  filters="{dropShadow}">
+		  filters="{dropShadow}" xmlns:panels="com.caipture.gui.panels.*" xmlns:buttons="com.caipture.gui.buttons.*"
+		  gap="0" width="220" height="186"
+		  creationComplete="creationCompleteHandler(event)">
 	
-	<s:Rect	left="0" right="0" top="0" bottom="0" alpha="0.9">
-		<s:fill>
-			<s:LinearGradient rotation="76">
-				<s:GradientEntry color="0xfbfbfb"/>
-				<s:GradientEntry color="0xe6e7e8"/>
-			</s:LinearGradient>
-		</s:fill>
-		<s:stroke>
-			<s:SolidColorStroke color="#ffffff" alpha="0.6"/>
-		</s:stroke>
-	</s:Rect>
-
-	<s:VGroup width="100%" height="100%" gap="3" paddingBottom="5" paddingLeft="5" paddingRight="5"
-			  paddingTop="5">
-		<s:Label color="#626262" fontStyle="italic" text="Genymotion login"/>
-		<s:TextInput id="loginInput" width="100%"/>
-		<s:Spacer height="2"/>
-		<s:Label color="#626262" fontStyle="italic" text="Password"/>
-		<s:TextInput id="passwordInput" width="100%"/>
-		<s:Label id="infoLabel"/>
-		<s:Label id="errorLabel"/>
-		
-		<s:HGroup>
-			<s:Button label="Ok" click="okButtonHandler(event)" icon="assets/icons/16/tick.png"/>
-			<s:Button label="Cancel" click="cancelButtonHandler(event)" icon="assets/icons/16/cross.png"/>
-		</s:HGroup>
-	</s:VGroup>
+	<panels:TitlePanel id="inputPanel" label="Genymotion credentials" height="100%" width="100%"/>
+	
+	<panels:BottomButtons width="100%">
+		<buttons:SmallButton label="Ok" click="setCredentials()" fontSize="14"/>
+		<buttons:SmallButton label="Cancel" click="cancelButtonHandler(event)" fontSize="14"/>
+	</panels:BottomButtons>
 	
 	<fx:Script>
 		<![CDATA[
 			import com.ats.managers.gmsaas.GmsaasManager;
 			
+			import flash.filters.BitmapFilterQuality;
+			
+			import mx.events.FlexEvent;
 			import mx.managers.PopUpManager;
 			
-			import flash.filters.BitmapFilterQuality;
 			import spark.filters.DropShadowFilter;
 			
 			public static const dropShadow:DropShadowFilter = new DropShadowFilter(4.0, 45, 0x000000, 0.4, 8.0, 8.0, 0.9, BitmapFilterQuality.HIGH, false, false, false);
@@ -45,44 +28,60 @@
 			public var successCallback:Function;
 			public var cancelCallback:Function;
 			
+			private var content:CredentialsForm;
+			
 			private function cancelButtonHandler(event:MouseEvent):void {
-				if (cancelCallback) {
+				if (cancelCallback != null) {
 					cancelCallback(this)
 				} else {
 					PopUpManager.removePopUp(this)
 				}
 			}
 			
-			private function okButtonHandler(event:MouseEvent):void {
-				var login:String = loginInput.text
-				var password:String = passwordInput.text
+			private function setCredentials():void {
 				
-				if (!login || !password) {
-					errorLabel.text = "Missing credentials"
-					return
+				content.enabled = false;
+				
+				var login:String = content.login
+				var password:String = content.password
+				
+				if (login.length > 0 &&  password.length > 0) {
+					
+					var alert:CredentialsAlert = this
+					GmsaasManager.getInstance().login(login, password, function(result:Object, error:String):void {
+						//infoLabel.text = null
+						
+						if (error) {
+							content.enabled = true;
+							//errorLabel.text = error
+							return
+						}
+						
+						if (successCallback == null) {
+							trace("WARNING : Credentials alert success callback not set")
+							return
+						}
+						
+						successCallback(alert)
+					})
 				}
 				
-				infoLabel.text = "Connecting..."
-				
-				var alert:CredentialsAlert = this
-				GmsaasManager.getInstance().login(login, password, function(result:Object, error:String):void {
-					infoLabel.text = null
-					
-					if (error) {
-						errorLabel.text = error
-						return
-					}
-					
-					if (!successCallback) {
-						trace("WARNING : Credentials alert success callback not set")
-						return
-					}
-					
-					successCallback(alert)
-				})
+				//infoLabel.text = "Connecting..."
+			}
+			
+			protected function creationCompleteHandler(event:FlexEvent):void
+			{
+				content = new CredentialsForm();
+				content.addEventListener("enterKey", enterKeyHandler, false, 0, true);
+				inputPanel.addContent(content);
+			}
+			
+			private function enterKeyHandler(ev:Event):void{
+				content.removeEventListener("enterKey", enterKeyHandler);
+				setCredentials()
 			}
 			
 		]]>
 	</fx:Script>
 	
-</s:Group>
+</s:VGroup>
