--- a/src/com/ats/gui/renderer/SimulatorDeviceRenderer.mxml
+++ b/src/com/ats/gui/renderer/SimulatorDeviceRenderer.mxml
@@ -78,10 +78,9 @@
 			<s:VGroup gap="3" mouseEnabled="false" verticalAlign="bottom" height="100%">
 				<s:Label text="{sim.modelName}" fontWeight="bold" color="{(data as Simulator).status==Simulator.OFF?0x968ca3:0x113b55}" maxWidth="234" maxDisplayedLines="1"/>
 
-				<s:HGroup>
-					<s:Label text="{sim.osVersion}" fontSize="11" fontStyle="italic" color="#758696"/>
-					<s:Label text="- Genymotion" fontSize="11" fontStyle="italic" color="#758696" visible="{data is GenymotionSaasSimulator}"/>
-
+				<s:HGroup color="#e4e7e9">
+					<s:Label text="{sim.osVersion}" fontSize="11" fontStyle="italic"/>
+					<s:Label text="- Genymotion" fontSize="11" fontStyle="italic" visible="{data is GenymotionSaasSimulator}"/>
 				</s:HGroup>
 			</s:VGroup>
 		</s:HGroup>
